<resources>
    <string name="app_name" translatable="false">TimeTracker</string>

    <string name="removeTitle">Remove</string>
    <string name="removeMessage">Are you sure you want to remove it?</string>
    <string name="selectCreateTitle">Add a</string>
    <string name="actionBarProject">Create Project</string>
    <string name="actionBarTask">Create Task</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="noNameError">Name required</string>
    <string name="exitTitle">Exit</string>
    <string name="exitMessage">" Are there any scheduled tasks and are you sure you want to leave?"</string>
    <string name="emptyMessage">Does not have any project or task</string>
    <string name="project">Project</string>
    <string name="task">Task</string>
    <string name="emptyMessageIntervals">Does not have any interval</string>
    <string name="generate_report">Generate Report</string>
    <string name="selectReportType">Select the report type</string>
    <string name="selectOption">Choose an option</string>
    <string name="short_report">Short Report</string>
    <string name="extended_report">Detailed Report</string>
    <string name="change_language">Change language</string>
    <string name="type">Type</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="format">Format</string>
    <string name="scheduled">Scheduled</string>
    <string name="limited">Limited</string>
    <string name="timeLimit">Time Limit (s)</string>
    <string name="editProject_title">Edit Project</string>
    <string name="editTask_title">Edit Task</string>
    <string name="fromDateHigherThanToDate">Start Date is higher than End Date</string>
    <string name="duration">Duration</string>
    <string name="running">Running</string>
    <string name="level">Level</string>
    <string name="sort_by_date">By Date</string>
    <string name="sort_by_name">By Name</string>
    <string name="sort_by_duration">By Duration</string>
</resources>
