<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/playPauseAll"
        android:icon="@android:drawable/ic_media_pause"
        android:title=""
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="Item"
        app:showAsAction="always">
        <menu >
            <item android:title="@string/sort_by_date" />
            <item android:title="@string/sort_by_name" />
        </menu>
    </item>
    <item
        android:id="@+id/generateReport"
        android:title="@string/generate_report" />
    <item
        android:id="@+id/changeLanguage"
        android:title="@string/change_language" />

</menu>